--- a/csharp/chat-module-0.3/Tests/Tests.csproj
+++ b/csharp/chat-module-0.3/Tests/Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChatClient\ChatClient.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
