Room class 테스트 코드 변환 완료

--- a/csharp/chat-module-0.3/Tests/Tests.csproj
+++ b/csharp/chat-module-0.3/Tests/Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChatClient\ChatClient.csproj" />
+    <ProjectReference Include="..\ChatRoom\ChatRoom.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
