리팩토링 및 unit test 워크플로우 옵션 추가
* dotnet test 명령에 -c Test 옵션 추가
* Test 빌드에서 Log.Print 출력하지 않도록 수정
* Room.cs : stdin 명령 처리 기능 추가
* 비동기 console read 클래스 추가
* Room 명령어 파싱 클래스 추가
* IClient 및 ConnectionContext 메서드 CancellationToken 지원 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: 테스트 실행
         run:  |
-          dotnet test --logger:junit
+          dotnet test -c Test --logger:junit
           git status
         working-directory: csharp/chat-module-0.3/Tests
 
