Room Process 로직 최적화, 커맨드 수정, remote 테스트 추가
* MessageProtocol 추가하려다 실패 (인코딩과
* ConcurrentQueue 대신 BlockingCollection 사용
(thread-safe Producer Consumer 패턴 지원 클래스)

--- a/csharp/chat-module-0.3/ChatRoom/ChatRoom.csproj
+++ b/csharp/chat-module-0.3/ChatRoom/ChatRoom.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Configurations>Debug;Release;Test</Configurations>
+    <Deterministic>false</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
